--- a/hope-ui-react-dashboard-main/public/index.html
+++ b/hope-ui-react-dashboard-main/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -35,14 +34,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
     <!--REACT-SLICKY LIENS POUR LES SLIDER-->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="../src/assets/logoEnsac.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -82,7 +81,8 @@
     </script>
     <!-- End Google Tag Manager -->
     <title>
-      Hope UI | React App Responsive Bootstrap 5 Admin Dashboard Template
+      ENSAC | Votre plateforme d'apprentissage fournie par L'école nationale des
+      sciences appliquées en collaboration avec USMBA - Fez
     </title>
   </head>
   <body>
